--- a/NetBox/NetBox.html
+++ b/NetBox/NetBox.html
@@ -79,4 +79,7 @@ Terraform.
    В NetBox реализован следующий заполняемый функционал:
 </p>
 <img src="./NetBox3.png" width="1400" height="800"/>
+<p class="neonText2">
+<a href="https://dimoroz772.github.io/Linux_Fedora/Web_Installing_NetBox_in_Docker.html" style="color:Lime">Гайд по установке ПО NetBox</a>
+</p>
 </div>
