--- a/NetBox/NetBox.html
+++ b/NetBox/NetBox.html
@@ -1,6 +1,6 @@
 <head>
   <title>NetBox</title>
-  <link rel="shortcut icon" href="./NetBox/NetBox.png" type="image/png">
+  <link rel="shortcut icon" href="./NetBox.png" type="image/png">
 </head>
  <head>
   <meta charset="utf-8">
